[package]
name = "ninpo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.0"
virt-sys = { path = "virt-sys", version = "0.3.0" }
uuid = "1.7.0"

[dev-dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde-xml-rs = { version = "0.6.0" }
pkg-config = { version = "0.3.0" }
regex = { version = "~1.9.0" }

[features]
qemu = ["virt-sys/qemu"]
bindgen_regenerate = ["virt-sys/bindgen_regenerate"]
api_coverage = []
